update workshop to metadata format version 2.0

--- a/end-to-end-encryption/src/.env
+++ b/end-to-end-encryption/src/.env
@@ -1,7 +1,7 @@
 ; define file names
-FILE        = "../data/7c297d9297b0491cbd316bdf351402c8"
+FILE        = "../data/5f6b70999f8a4e2e901b89b9df5b2499"
 META_DATA   = "../data/meta.data"
 PRIVATE_KEY = "../data/admin.private.key"
 
 ; define user information
-USER_MNEMONIC = "hood stamp fee tree winter quarter bar interest vintage dash lazy deposit"
+USER_MNEMONIC = "drift company glass demise table grass skill master oval wait century kite"
